release: V1.2-Pre40 (Build 136) - Room SQL ATTACH sync + 14-field schema + lamb icon